--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.9.0",
     "react-images": "^1.1.7",
+    "react-modal": "^3.11.2",
     "react-photo-gallery": "^8.0.0",
     "react-responsive-carousel": "^3.2.7",
     "react-router": "^5.1.2",
