--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.9.0",
     "react-big-calendar": "^0.24.5",
     "react-bootstrap": "^1.0.1",
+    "react-burger-menu": "^2.6.13",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.9.0",
     "react-images": "^1.1.7",
