--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "bootstrap": "^4.4.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^7.17.1",
     "moment": "^2.25.3",
+    "nodejs": "0.0.0",
     "nodemailer": "^6.4.6",
     "nodemailer-mailgun-transport": "^2.0.0",
     "react": "^16.9.0",
