--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^7.17.1",
+    "jquery": "^3.5.1",
     "moment": "^2.25.3",
     "nodejs": "0.0.0",
     "nodemailer": "^6.4.6",
